# riboseq

./: .gitignore  .pipeline_launcher.pid  AGENTS.md  CHANGELOG.md  CHANGELOG_2026-01-29_to_02-02.md  CHANGELOG_ENGLISH_2026-01-29-to-02-02.md  CLAUDE.md  GENCODE_INTEGRATION_PROJECT_SUMMARY.md  GENCODE_SESSION_UPDATE_20260117.md  IMPLEMENTATION_CHECKLIST.md  README.md  README_UPDATE_SUMMARY.md  SUMMARY.md  SYNC_PLAN_20260130.md  TECHNICAL_REFERENCE.md  contaminant.fa  dummy_contaminant.fa  main.nf  modules.json  nextflow.config  nextflow_schema.json  report_test_small.html  run_test_codespace.sh  run_test_colab.sh  run_test_colab_conda.sh  test_psite_offset.txt
.github/: copilot-instructions.md
assets/: schema_input.json
conf/: gencode_mouse_m35.config  local_singularity.config  modules.config  test.config  test_codespace.config  test_colab.config  test_colab_conda.config  test_full.config  test_local_conda.config  test_local_singularity.config
containers/: Singularity.gedi.def  Singularity.orfquant.bioc320.def  Singularity.orfquant.def  Singularity.orfquant.mirai.def  Singularity.orfquant.patched.def  Singularity.r_te_analysis.def  (+2 more)
docs/: README.md  (+12 more)
orfont/: pyproject.toml
orfont/orfont/: cli.py
orfont/orfont/classification/: wrapper.py
orfont/orfont/converters/: ribotish.py  ribotricer.py
orfont/orfont/core/: __init__.py  db.py  intervals.py  models.py  scripts_bridge.py  sequence.py  utils.py
orfont/orfont/io/: __init__.py  gtf.py  orfs.py
orfont/orfont/pipelines/: riboseq.py
orfont/orfont/unification/: __init__.py  builder.py  dedup.py  parsers.py
(+290 files in other folders)
