[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orfont"
version = "0.1.0"
description = "ORF unification and classification (ontology) for Ribo-seq pipelines"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.79",
    "pyfaidx>=0.7.0",
    "duckdb>=1.0.0",
    "pandas>=1.3",
]

[project.scripts]
orfont = "orfont.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["orfont"]

[tool.uv]
dev-dependencies = [
    "pytest>=7",
]
